Segundo commit de ej02

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
                 <img src="imgs/GOHAN1.jpg" alt="GOHAN1">
                 <img src="imgs/GOHAN2.jpg" alt="GOHAN2">
                 <img src="imgs/GOHAN3.jpg" alt="GOHAN3">
+                <img src="imgs/GOHAN4.jpg" alt="GOHAN4">
+                <img src="imgs/GOHAN5.jpg" alt="GOHAN5">
             </div>
         </section>
 
